tests/arch/riscv/error/compiler/test_riscv_error_compiler_015.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.data
   .align 2
    example:   .word hello

.text
main:
   li t0, 10